<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="cardModel"
            type="digital.wup.cardsummary.model.CardModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountDetailsTitleText"
            style="@style/detailsTitleText"
            android:text="@string/label_text_account_details" />

        <digital.wup.cardsummary.common.CardMonetaryRow
            android:id="@+id/accountLimitRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:currencyValue="@{cardModel.currency}"
            app:monetaryLabel="@string/label_text_account_limit"
            app:monetaryRowValue="@{cardModel.accountDetails.accountLimit}" />

        <digital.wup.cardsummary.common.CardDetailRow
            android:id="@+id/accountNumberRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detailLabel="@string/label_text_account_number"
            app:detailRowValue="@{cardModel.accountDetails.accountNumber}" />


    </LinearLayout>
</layout>